--- a/templates/modules/specs-list.tt
+++ b/templates/modules/specs-list.tt
@@ -1,6 +1,17 @@
-<ul>
+<table>
+<thead>
+<tr>
+<th>Name</th>
+<th>Date</th>
+</tr>
+</thead>
+<tbody>
 [% FOREACH spec IN specs %]
-<li><a href="[% spec.index_url | html %]">[% spec.title | html %]</a></li>
+<tr class="[% IF loop.index % 2 == 1 %]even[% ELSE %]odd[% END %]">
+<td class="specname"><a href="[% spec.index_url | html %]">[% spec.title | html %]</a></td>
+<td class="specdate">[% spec.date | html %]</td>
+</tr>
 [% END %]
-</ul>
+</tbody>
+</table>
 
