--- a/templates/page.tt
+++ b/templates/page.tt
@@ -3,13 +3,16 @@
 <head>
 <title>[% page_title | html %] - Activity Streams Registry</title>
 <base href="/">
+<link rel="stylesheet" type="text/css" href="/media/style.css">
 </head>
 <body>
 <header>
-<h1>[% page_title | html %]</h1>
+<h1><a href="/">Activity Streams Registry</a></h1>
 </header>
 
 <section id="body">
+<h2>[% page_title | html %]</h2>
+
 [% content %]
 </section>
 
