--- a/templates/page.tt
+++ b/templates/page.tt
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>[% page_title | html %] - Activity Streams Registry</title>
+<title>[% IF page_title %][% page_title | html %] - [% END %]Activity Streams Registry</title>
 <base href="/">
 <link rel="stylesheet" type="text/css" href="/media/style.css">
 </head>
@@ -11,7 +11,7 @@
 </header>
 
 <section id="body">
-<h2>[% page_title | html %]</h2>
+[% IF page_title %]<h2>[% page_title | html %]</h2>[% END %]
 
 [% content %]
 </section>
