Change the templates to approximate what was previously generated on the website.
It looks like a bunch of changes were made to the templates in order to
generate what's on the website today, but those changes were never
committed back to the repository. This changeset approximates what was
done, enough that it should look the same at least.

--- a/templates/page.tt
+++ b/templates/page.tt
@@ -1,20 +1,6 @@
-<!DOCTYPE html>
-<html>
-<head>
-<title>[% IF page_title %][% page_title | html %] - [% END %]Activity Streams Registry</title>
-<base href="/">
-<link rel="stylesheet" type="text/css" href="/media/style.css">
-</head>
-<body>
-<header>
-<h1><a href="/">Activity Streams Registry</a></h1>
-</header>
-
-<section id="body">
+---
+layout: registry
+---
 [% IF page_title %]<h2>[% page_title | html %]</h2>[% END %]
 
 [% content %]
-</section>
-
-</body>
-</html>
